fix: change description and image

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="ERC-20 Safe Transfer decsription" />
+        <meta name="description" content="Stop sending tokens to wrong address or blockchain" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,6 +23,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
         <title>ERC-20 Safe Transfer</title>
+        <meta property="og:image" content="%PUBLIC_URL%/favicon150.png">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
