--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
         <title>ERC-20 Safe Transfer</title>
+        <meta property="og:title" content="ERC-20 Safe Transfer">
         <meta property="og:image" content="%PUBLIC_URL%/favicon150.png">
     </head>
     <body>
