--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,16 @@
               new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
           j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-WT64HDR');</script>
+        })(window,document,'script','dataLayer','GTM-N6V489H');</script>
         <!-- End Google Tag Manager -->
 
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-6SSQF206F0"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-713MQQYBS4"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
-            gtag('config', 'G-6SSQF206F0');
+            gtag('config', 'G-713MQQYBS4');
         </script>
 
         <meta charset="utf-8" />
