--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Stop sending tokens to wrong address or blockchain" />
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
